--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
 	"scripts": {
 		"start": "node server.js",
 		"dev": "nodemon server.js",
-		"init-db": "node src/database/init-db.js"
+		"init-db": "node src/database/init-db.js",
+		"build": "pnpm install && pnpm run init-db"
+	},
+	"engines": {
+		"node": ">=18"
 	},
 	"keywords": [
 		"schedule",
