--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"start": "node server.js",
 		"dev": "nodemon server.js",
 		"init-db": "node src/database/init-db.js",
-		"build": "pnpm install && pnpm run init-db"
+		"build": "pnpm install"
 	},
 	"engines": {
 		"node": ">=18"
